--- a/cn.zh-cn/API参考/添加监控数据.md
+++ b/cn.zh-cn/API参考/添加监控数据.md
@@ -6,22 +6,22 @@
 
 ## URI<a name="section62331491"></a>
 
--   URI格式
-
-    POST /V1.0/\{project\_id\}/metric-data
+POST /V1.0/\{project\_id\}/metric-data
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table75058417558"></a>
-    <table><thead align="left"><tr id="row6325008217558"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.1.3.1.1"><p id="p2298303317558"><a name="p2298303317558"></a><a name="p2298303317558"></a>名称</p>
+    <table><thead align="left"><tr id="row6325008217558"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.2.3.1.1"><p id="p2298303317558"><a name="p2298303317558"></a><a name="p2298303317558"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.1.3.1.2"><p id="p6517651717558"><a name="p6517651717558"></a><a name="p6517651717558"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.2.3.1.2"><p id="p6517651717558"><a name="p6517651717558"></a><a name="p6517651717558"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row4480653817558"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p545094717558"><a name="p545094717558"></a><a name="p545094717558"></a>project_id</p>
+    <tbody><tr id="row4480653817558"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p545094717558"><a name="p545094717558"></a><a name="p545094717558"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p6175070717558"><a name="p6175070717558"></a><a name="p6175070717558"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p6175070717558"><a name="p6175070717558"></a><a name="p6175070717558"></a>项目编号。</p>
     </td>
     </tr>
     </tbody>
@@ -35,112 +35,114 @@
     ```
 
 
-## 请求<a name="section24112512"></a>
+## 请求消息<a name="section24112512"></a>
 
 >![](public_sys-resources/icon-notice.gif) **注意：**   
 >1.  单次POST请求消息体大小不能超过512KB，否则请求会被服务端拒绝。  
 >2.  POST请求发送周期应小于最小聚合周期，否则会出现聚合数据点不连续。例如：聚合周期为5分钟，发送周期为7分钟，则5分钟情况的聚合数据会出现每10分钟才出现一个点。  
 >3.  POST请求体中时间戳（collect\_time）的值必须从当前时间的前三天到当前时间后的十分钟之内某一时间，如果不在这个范围内，则不允许插入指标数据。  
 
--   参数说明
+-   请求参数
+
+    **表 2**  请求参数
 
     <a name="table32162070195021"></a>
-    <table><thead align="left"><tr id="row28619263195021"><th class="cellrowborder" valign="top" width="30.826917308269174%" id="mcps1.1.5.1.1"><p id="p36458985195021"><a name="p36458985195021"></a><a name="p36458985195021"></a>名称</p>
+    <table><thead align="left"><tr id="row28619263195021"><th class="cellrowborder" valign="top" width="30.826917308269174%" id="mcps1.2.5.1.1"><p id="p36458985195021"><a name="p36458985195021"></a><a name="p36458985195021"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="15.978402159784022%" id="mcps1.1.5.1.2"><p id="p387799195021"><a name="p387799195021"></a><a name="p387799195021"></a>是否必选</p>
+    <th class="cellrowborder" valign="top" width="15.978402159784022%" id="mcps1.2.5.1.2"><p id="p387799195021"><a name="p387799195021"></a><a name="p387799195021"></a>是否必选</p>
     </th>
-    <th class="cellrowborder" valign="top" width="16.91830816918308%" id="mcps1.1.5.1.3"><p id="p31411762195021"><a name="p31411762195021"></a><a name="p31411762195021"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="16.91830816918308%" id="mcps1.2.5.1.3"><p id="p31411762195021"><a name="p31411762195021"></a><a name="p31411762195021"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="36.27637236276372%" id="mcps1.1.5.1.4"><p id="p61324769195021"><a name="p61324769195021"></a><a name="p61324769195021"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="36.27637236276372%" id="mcps1.2.5.1.4"><p id="p61324769195021"><a name="p61324769195021"></a><a name="p61324769195021"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row1250381195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p34171997195021"><a name="p34171997195021"></a><a name="p34171997195021"></a>metric</p>
+    <tbody><tr id="row1250381195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p34171997195021"><a name="p34171997195021"></a><a name="p34171997195021"></a>metric</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p16468345195021"><a name="p16468345195021"></a><a name="p16468345195021"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p16468345195021"><a name="p16468345195021"></a><a name="p16468345195021"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p58867594195021"><a name="p58867594195021"></a><a name="p58867594195021"></a>JSON对象</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p58867594195021"><a name="p58867594195021"></a><a name="p58867594195021"></a>JSON对象</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p3545848195021"><a name="p3545848195021"></a><a name="p3545848195021"></a>指标数据。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p3545848195021"><a name="p3545848195021"></a><a name="p3545848195021"></a>指标数据。</p>
     </td>
     </tr>
-    <tr id="row31912637195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p34786817195021"><a name="p34786817195021"></a><a name="p34786817195021"></a>namespace</p>
+    <tr id="row31912637195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p34786817195021"><a name="p34786817195021"></a><a name="p34786817195021"></a>namespace</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p66268756195021"><a name="p66268756195021"></a><a name="p66268756195021"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p66268756195021"><a name="p66268756195021"></a><a name="p66268756195021"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p66169057195021"><a name="p66169057195021"></a><a name="p66169057195021"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p66169057195021"><a name="p66169057195021"></a><a name="p66169057195021"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p6657193513177"><a name="p6657193513177"></a><a name="p6657193513177"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32，service不能为“SYS”。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p6657193513177"><a name="p6657193513177"></a><a name="p6657193513177"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32，service不能为“SYS”。</p>
     <p id="p58093390195021"><a name="p58093390195021"></a><a name="p58093390195021"></a>namespace不能为AGT.ECS、SERVICE.BMS。</p>
     </td>
     </tr>
-    <tr id="row53078464195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p4388321195021"><a name="p4388321195021"></a><a name="p4388321195021"></a>metric_name</p>
+    <tr id="row53078464195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p4388321195021"><a name="p4388321195021"></a><a name="p4388321195021"></a>metric_name</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p19909686195021"><a name="p19909686195021"></a><a name="p19909686195021"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p19909686195021"><a name="p19909686195021"></a><a name="p19909686195021"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p2071847195021"><a name="p2071847195021"></a><a name="p2071847195021"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p2071847195021"><a name="p2071847195021"></a><a name="p2071847195021"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p33601950195021"><a name="p33601950195021"></a><a name="p33601950195021"></a>指标名称，必须以字母开头，只能包含0-9/a-z/A-Z/_，长度最短为1，最大为64。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p33601950195021"><a name="p33601950195021"></a><a name="p33601950195021"></a>指标名称，必须以字母开头，只能包含0-9/a-z/A-Z/_，长度最短为1，最大为64。</p>
     </td>
     </tr>
-    <tr id="row33982094195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p1086214195021"><a name="p1086214195021"></a><a name="p1086214195021"></a>dimensions</p>
+    <tr id="row33982094195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p1086214195021"><a name="p1086214195021"></a><a name="p1086214195021"></a>dimensions</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p20874486195021"><a name="p20874486195021"></a><a name="p20874486195021"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p20874486195021"><a name="p20874486195021"></a><a name="p20874486195021"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p13111815195021"><a name="p13111815195021"></a><a name="p13111815195021"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p13111815195021"><a name="p13111815195021"></a><a name="p13111815195021"></a>JSON数组</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p2050912311233"><a name="p2050912311233"></a><a name="p2050912311233"></a>指标维度列表。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p2050912311233"><a name="p2050912311233"></a><a name="p2050912311233"></a>指标维度列表。</p>
     <p id="p4791487420125"><a name="p4791487420125"></a><a name="p4791487420125"></a>单个维度为json对象，结构说明如下</p>
     <p id="p5036438011233"><a name="p5036438011233"></a><a name="p5036438011233"></a>dimension.name：必须以字母开头，只能包含0-9/a-z/A-Z/_/-，长度最短为1，最大为32。</p>
     <p id="p5062624311233"><a name="p5062624311233"></a><a name="p5062624311233"></a>dimension.value：必须以字母或数字开头，只能包含0-9/a-z/A-Z/_/-，长度最短为1，最大为256。</p>
     </td>
     </tr>
-    <tr id="row29054824195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p4630529195021"><a name="p4630529195021"></a><a name="p4630529195021"></a>ttl</p>
+    <tr id="row29054824195021"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p4630529195021"><a name="p4630529195021"></a><a name="p4630529195021"></a>ttl</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p39528567195021"><a name="p39528567195021"></a><a name="p39528567195021"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p39528567195021"><a name="p39528567195021"></a><a name="p39528567195021"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p47697329195021"><a name="p47697329195021"></a><a name="p47697329195021"></a>数值类型</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p47697329195021"><a name="p47697329195021"></a><a name="p47697329195021"></a>数值类型</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p38278423195021"><a name="p38278423195021"></a><a name="p38278423195021"></a>数据的有效期，超出该有效期则自动删除该数据，单位秒，最大值604800。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p38278423195021"><a name="p38278423195021"></a><a name="p38278423195021"></a>数据的有效期，超出该有效期则自动删除该数据，单位秒，最大值604800。</p>
     </td>
     </tr>
-    <tr id="row4745219920316"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p1842289220316"><a name="p1842289220316"></a><a name="p1842289220316"></a>collect_time</p>
+    <tr id="row4745219920316"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p1842289220316"><a name="p1842289220316"></a><a name="p1842289220316"></a>collect_time</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p1585929820316"><a name="p1585929820316"></a><a name="p1585929820316"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p1585929820316"><a name="p1585929820316"></a><a name="p1585929820316"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p953476820316"><a name="p953476820316"></a><a name="p953476820316"></a>UNIX时间戳</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p953476820316"><a name="p953476820316"></a><a name="p953476820316"></a>UNIX时间戳</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p3411878320316"><a name="p3411878320316"></a><a name="p3411878320316"></a>数据收集时间</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p3411878320316"><a name="p3411878320316"></a><a name="p3411878320316"></a>数据收集时间</p>
     <p id="p2669289720429"><a name="p2669289720429"></a><a name="p2669289720429"></a>UNIX时间戳，单位毫秒。</p>
     <div class="note" id="note5561844218544"><a name="note5561844218544"></a><a name="note5561844218544"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p3080393018544"><a name="p3080393018544"></a><a name="p3080393018544"></a>因为客户端到服务器端有延时，因此插入数据的时间戳应该在[当前时间-3天+20秒，当前时间+10分钟-20秒]区间内，保证到达服务器时不会因为传输时延造成数据不能插入数据库。</p>
     </div></div>
     </td>
     </tr>
-    <tr id="row1779865120321"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p3240464620321"><a name="p3240464620321"></a><a name="p3240464620321"></a>value</p>
+    <tr id="row1779865120321"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p3240464620321"><a name="p3240464620321"></a><a name="p3240464620321"></a>value</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p753068220321"><a name="p753068220321"></a><a name="p753068220321"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p753068220321"><a name="p753068220321"></a><a name="p753068220321"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p600546920321"><a name="p600546920321"></a><a name="p600546920321"></a>数值类型</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p600546920321"><a name="p600546920321"></a><a name="p600546920321"></a>数值类型</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p1668101820321"><a name="p1668101820321"></a><a name="p1668101820321"></a>指标数据的值。</p>
-    </td>
-    </tr>
-    <tr id="row743463520526"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p6533457720526"><a name="p6533457720526"></a><a name="p6533457720526"></a>unit</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p5760939120526"><a name="p5760939120526"></a><a name="p5760939120526"></a>否</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p3584913420526"><a name="p3584913420526"></a><a name="p3584913420526"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p1809877420526"><a name="p1809877420526"></a><a name="p1809877420526"></a>数据的单位。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p1668101820321"><a name="p1668101820321"></a><a name="p1668101820321"></a>指标数据的值。</p>
     </td>
     </tr>
-    <tr id="row5567263220554"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p1318930920554"><a name="p1318930920554"></a><a name="p1318930920554"></a>type</p>
+    <tr id="row743463520526"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p6533457720526"><a name="p6533457720526"></a><a name="p6533457720526"></a>unit</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p6170108620554"><a name="p6170108620554"></a><a name="p6170108620554"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p5760939120526"><a name="p5760939120526"></a><a name="p5760939120526"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p3173210120554"><a name="p3173210120554"></a><a name="p3173210120554"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p3584913420526"><a name="p3584913420526"></a><a name="p3584913420526"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p2016335120554"><a name="p2016335120554"></a><a name="p2016335120554"></a>数据的类型，只能是"int"或"float"</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p1809877420526"><a name="p1809877420526"></a><a name="p1809877420526"></a>数据的单位。</p>
+    </td>
+    </tr>
+    <tr id="row5567263220554"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p1318930920554"><a name="p1318930920554"></a><a name="p1318930920554"></a>type</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p6170108620554"><a name="p6170108620554"></a><a name="p6170108620554"></a>否</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p3173210120554"><a name="p3173210120554"></a><a name="p3173210120554"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p2016335120554"><a name="p2016335120554"></a><a name="p2016335120554"></a>数据的类型，只能是"int"或"float"</p>
     </td>
     </tr>
     </tbody>
@@ -186,11 +188,8 @@
     ]
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
-
-## 响应<a name="section15686020"></a>
+## 响应消息<a name="section15686020"></a>
 
 无消息体。
 
@@ -247,4 +246,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section172711834720"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
